# AuraApp

Aura.Api/: README.md  pyproject.toml
Aura.Api/app/: main.py
Aura.Api/app/api/: api.py
Aura.Api/app/api/v1/: health_router.py
Aura.Api/app/core/: config.py
